# grid-world

./: .gitignore  DEPLOY.md  LICENSE  PROBE_SMOKE_RESULTS.txt  README.md  SMOKE_TEST_RESULTS.txt  TEST_RESULTS.txt  deploy_coord_belief_v4.sh  deploy_coordbelief_semantic_v6.sh  deploy_coordbelief_v5_stratified200.sh  deploy_coordbelief_v6_100_promptlast_cells.sh  deploy_trajectory_probe_viewer.sh  deploy_trajectory_probe_viewer_cartesian.sh  deploy_trajectory_probe_viewer_v3.sh  install_grid_world_next_analysis.sh  patch_coord_v4_feedback.sh  patch_viewer_single_class.sh  pyproject.toml  upgrade_grid_world_all_layers_no_grid.sh  upgrade_grid_world_diverse5x5.sh  upgrade_grid_world_large_models_multigpu_probes.sh
docs/: ALL_LAYERS_AND_NO_GRID.md  COORDINATE_BELIEF_V4.md  DIVERSE_5X5.md  LARGE_MODELS_AND_MULTIGPU_PROBES.md  README_zh.md
scripts/: analyze_run_quality.py  audit_rebuild_coordbelief_v6.py  build_coordbelief_targets_v6.py  compare_layer_conditions.py  compare_probe_reports.py  compare_probe_views.py  extract_activations_model_parallel.py  full_probe.sh  generate_coord_belief_v4.py  generate_viewer_gallery.py  install.sh  make_large_model_configs.py  make_probe_views.py  normalize_coord_v4_feedback.py  patch_trajectory_viewer_single_class.py  plot_layer_curves.py  prepare_analysis_view.py  run_4gpu.sh  run_diverse5x5_1000.sh  run_explicit_all_layers.sh  run_next_analysis.sh  run_no_grid_full.sh  run_qwen25_32b_coord100_v6.sh  run_qwen25_32b_coord200_stratified_v5.sh  run_qwen25_32b_coord200_v4.sh  run_qwen25_32b_coord200_v4.sh.bak_coord_v4_feedback  (+12 more)
(+51 files in other folders)
