[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid-world"
version = "0.1.0"
description = "A reproducible grid-world pipeline for LLM trajectories, activations, and probes."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "tabulate>=0.9",
]

[project.optional-dependencies]
generation = ["transformers>=4.45", "vllm>=0.6"]
activation = ["torch>=2.3", "transformers>=4.45"]
dev = ["pytest>=8.0", "ruff>=0.5"]
all = ["torch>=2.3", "transformers>=4.45", "vllm>=0.6", "pytest>=8.0", "ruff>=0.5"]

[project.scripts]
grid-world = "grid_world.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
